--- a/tagviewsample/src/main/res/values/strings.xml
+++ b/tagviewsample/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TagViewSample</string>
+    <string name="title_activity_guide">GuideActivity</string>
 </resources>
